--- a/project1songs.html
+++ b/project1songs.html
@@ -24,7 +24,7 @@
     <li><a href="project1songs.html">Twin Songs</a></li>
     <li><a href="project1movies.html">Favorite Movies</a></li>
   </ul>
-  <p id="cursorbutton">Click here to use a cute cursor</p>
+  <p id="cursorbutton">Click here to use a custom cursor</p>
   </div>
 </nav>
 
