--- a/project1movies.html
+++ b/project1movies.html
@@ -24,7 +24,7 @@
     <li><a href="project1songs.html">Twin Songs</a></li>
     <li><a href="project1movies.html">Favorite Movies</a></li>
   </ul>
-  <p id="cursorbutton">Click here to use a custom cursor</p>
+  <div id="cursorbutton">Click here to use a custom cursor</div>
   <div>
 </nav>
 
