Creating my map and maps page

--- a/project1movies.html
+++ b/project1movies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ITMD 361-01 Fall 2023 Project 2 - Movies</title>
+  <title>ITMD 361-01 Fall 2023 Project 3 - Movies</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -23,6 +23,7 @@
     <li><a href="index.html">Home/Resume</a></li>
     <li><a href="project1songs.html">Twin Songs</a></li>
     <li><a href="project1movies.html">Favorite Movies</a></li>
+    <li><a href="map.html">Map</a></li>
   </ul>
   <button id="cursorbutton">Click here to use a custom cursor</button>
   <div>
