--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
   
   <!!-- Google Maps API stuff -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script type="module" src=".js/map.js"></script>
+  <script type="module" src="js/map.js"></script>
 </head>
 <body>
   
