html checker fix

--- a/project1movies.html
+++ b/project1movies.html
@@ -26,7 +26,7 @@
     <li><a href="map.html">Map</a></li>
   </ul>
   <button id="cursorbutton">Click here to use a custom cursor</button>
-  <div>
+  </div>
 </nav>
 
 <header>
